# cymbra

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  melos.yaml  pubspec.yaml  release-please-config.json  sonar-project.properties
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  backend-it.yml  build.yml  commitlint.yml  flutter.yml  frb-codegen.yml  openspec-archive.yml  release-build.yml  release-please.yml  rust.yml  sonar.yml
apps/music/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml
apps/music/android/: .gitignore
apps/music/android/app/: build.gradle.kts  debug.keystore
apps/music/assets/scores/: CREDITS.md
apps/music/assets/soundfonts/: CREDITS.md
apps/music/integration_test/: app_test.dart  simple_test.dart
apps/music/integration_test/support/: fixture_score.dart
apps/music/ios/Flutter/: Debug.xcconfig  Release.xcconfig  Secrets.example.xcconfig
apps/music/ios/Runner/: AppDelegate.swift  Info.plist
apps/music/ios/Runner.xcodeproj/: project.pbxproj
apps/music/lib/: main.dart
apps/music/lib/painters/: keyboard_range.dart  partition_painter.dart  piano_keyboard_painter.dart  piano_layout.dart  smufl.dart  staff_painter.dart  synthesia_painter.dart
apps/music/lib/screens/: library_screen.dart  player_screen.dart
apps/music/lib/services/: account_service.dart  audio_service.dart  auth_policy.dart  auth_service.dart  grpc_client.dart  (+6 more)
apps/music/rust/: Cargo.toml
apps/music/rust/src/: frb_generated.rs  lib.rs
apps/music/rust/src/api/: audio.rs  audio_core.rs  midi.rs  midi_core.rs  mod.rs  musicxml.rs  musicxml_core.rs  score.rs  simple.rs
apps/music/rust_builder/: pubspec.yaml
apps/music/test/: piano_layout_test.dart  player_notifier_test.dart  player_state_test.dart
apps/music/tool/: gen_grpc.sh
backend/: .env.example  README.md  docker-compose.yml
backend/auth/: Cargo.toml
backend/auth-port/: Cargo.toml  build.rs
backend/auth-port/proto/: auth.proto
backend/auth-port/src/: lib.rs
backend/auth/migrations/: 0001_init.sql
backend/auth/src/: creds.rs  creds_pg.rs  grpc.rs  lib.rs  module.rs  session.rs  verifier.rs
backend/auth/tests/: auth_flow.rs
backend/db/init/: 00-roles.sh  01-schemas-roles.sql  roles.sql.tpl
backend/jobs/: Cargo.toml
backend/jobs/migrations/: 0001_mq_setup.sql  0002_mq_clear.sql  0003_mq_fix_latest_message.sql  0004_mq_fix_concurrent_poll.sql  0005_mq_fix_clear_all.sql  0006_jobs_tables.sql  0007_seed_schedules.sql
backend/jobs/src/: channel.rs  dlq.rs  engine.rs  enqueue.rs  error.rs  lib.rs  registry.rs  retry.rs  schedule.rs  scheduler.rs
backend/jobs/tests/: ops_admin_role.rs  reliability_test.rs  scheduler_test.rs  spike_transactional_enqueue.rs
backend/observability/: README.md  docker-compose.yml  otel-collector.yaml  prometheus.yml  tempo.yaml
backend/observability/grafana/: alerting.yaml  dashboards.yaml  datasources.yaml
backend/platform/: Cargo.toml
backend/platform/src/: cache.rs  config.rs  db.rs  email.rs  error.rs  guard.rs  identity.rs  interceptor.rs  jwks.rs  lib.rs  logging.rs  metrics.rs  oidc.rs  password.rs  ratelimit.rs  telemetry.rs  token.rs
backend/scripts/: check_boundaries.py
backend/server/: Cargo.toml
backend/server/src/: lib.rs  main.rs
backend/user/: Cargo.toml
backend/user-port/: Cargo.toml  build.rs
backend/user-port/proto/: user.proto
backend/user-port/src/: lib.rs
backend/user/migrations/: 0001_init.sql  0002_handle.sql  0003_created_at.sql
backend/user/src/: grpc.rs  handle_core.rs  lib.rs  module.rs  pg.rs  reaper_core.rs  repo.rs  version_core.rs
backend/user/tests/: db_isolation.rs
backend/worker/: Cargo.toml
backend/worker/src/: config.rs  handlers.rs  health.rs  main.rs
openspec/changes/add-account-identity-linking/: design.md  proposal.md  tasks.md
openspec/changes/add-backend-sync-api/: design.md  proposal.md  tasks.md
openspec/changes/add-cymbra-id/: design.md  proposal.md  tasks.md
openspec/changes/add-desktop-oauth-loopback/: design.md  proposal.md  tasks.md
openspec/changes/add-job-infrastructure/: design.md  tasks.md
openspec/changes/add-music-account-access/: design.md  proposal.md  tasks.md
openspec/changes/add-ops-db-access/: tasks.md
openspec/changes/adopt-riverpod-state/: design.md  proposal.md  tasks.md
openspec/changes/assisted-practice-keys/: design.md  proposal.md  tasks.md
openspec/changes/dynamic-keyboard-display/: design.md  proposal.md
openspec/changes/fix-handle-onboarding-escape/: tasks.md
openspec/changes/hand-color-coding/: proposal.md  tasks.md
openspec/changes/hand-selection-filter/: proposal.md  tasks.md
openspec/changes/musicxml-parsing-and-geometry/: design.md  proposal.md  tasks.md
openspec/changes/partition-playback-cursor/: design.md  proposal.md  tasks.md
openspec/changes/piano-sound-output/: design.md  tasks.md
openspec/changes/piano-sound-selection/: design.md  proposal.md  tasks.md
openspec/changes/playable-onscreen-keyboard/: design.md  tasks.md
openspec/changes/ratify-midi-poc/: design.md  proposal.md  tasks.md
openspec/changes/wait-on-keypress/: proposal.md  tasks.md
openspec/specs/audio-output/: spec.md
openspec/specs/backend-auth/: spec.md
openspec/specs/backend-service/: spec.md
openspec/specs/hand-color-coding/: spec.md
openspec/specs/hand-selection/: spec.md
openspec/specs/handle-onboarding/: spec.md
openspec/specs/job-infrastructure/: spec.md
openspec/specs/keyboard-display/: spec.md
openspec/specs/metronome/: spec.md
openspec/specs/midi/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/ops-db-access/: spec.md
openspec/specs/score-library/: spec.md
openspec/specs/score-notation/: spec.md
openspec/specs/state-management/: spec.md
openspec/specs/user-account/: spec.md
openspec/specs/wait-mode/: spec.md
(+144 files in other folders)
