[package]
name = "cymbra-auth-port"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cymbra ID auth module — contract crate (port trait, DTOs, protobuf, gRPC client adapter)."

[dependencies]
cymbra-platform = { path = "../platform" }
tonic.workspace = true
prost.workspace = true
async-trait.workspace = true

[build-dependencies]
tonic-build.workspace = true
