[package]
name = "cymbra-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cymbra ID auth module — implementation (IdentityVerifier, local credentials, sessions, direct + gRPC server adapters)."

[dependencies]
cymbra-auth-port = { path = "../auth-port" }
cymbra-user-port = { path = "../user-port" }
cymbra-platform = { path = "../platform" }
async-trait.workspace = true
tokio.workspace = true
