[package]
name = "cymbra-jobs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cymbra async-job substrate — transactional enqueue seam, channel/retry/DLQ policy, and the recurring scheduler. Engine-agnostic (sqlxmq lives in the worker)."

[dependencies]
sqlx.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
serde_json.workspace = true
sqlxmq.workspace = true
serde.workspace = true
