[package]
name = "cymbra-user-port"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cymbra ID user module — contract crate (port trait, DTOs, protobuf, gRPC client adapter)."

[dependencies]
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
