[package]
name = "cymbra-user"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cymbra ID user module — implementation (account aggregate, identities, scoped roles, direct + gRPC server adapters)."

[dependencies]
cymbra-user-port = { path = "../user-port" }
cymbra-platform = { path = "../platform" }
async-trait.workspace = true
tokio.workspace = true
tonic.workspace = true
sqlx.workspace = true
uuid.workspace = true
anyhow.workspace = true
